--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
 #skip {
     position: absolute;
     top: -100px;
+    background-color: #FFCB05;
+}
+
+#skip:focus {
+    top: 20px;
 }
 
 /* ------Header Styles--------- */
@@ -211,7 +216,7 @@ footer p {
 }
 
 footer a {
-    text-decoration: none;
+    text-decoration: underline;
     color: #FFCB05;
 }
 
