--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
 #skip {
     position: absolute;
     top: -100px;
     background-color: #FFCB05;
+    z-index: 2;
 }
 
 #skip:focus {
@@ -33,22 +39,31 @@ nav {
     margin: 0px 10px 0px 10px;
 }
 
+#nav_heading {
+    display: none;
+    color: #FFCB05;
+}
+
 #navigation {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
     display: inline-block;
-    padding: 10px 5px 10px 5px;
+    padding: 10px 10px 10px 10px;
     color: white;
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     text-align: center;
     margin: 10px;
+    box-sizing: content-box;
+    border-radius: 5px;
 }
+
 
 nav a:hover {
     color: #00274C;
@@ -65,13 +80,15 @@ main {
     gap: 15px;
 }
 
-p, li {
+p, li, label {
     font-family: "Nunito Sans", sans-serif;
     font-size: 16px;
     line-height: 150%;
 }
 
-h1, h2, h3, h4, h5, h6 {
+
+
+h1, h2, h3, h4, h5, h6, legend {
     font-family: "Montserrat", sans-serif;
     color: #00274C;
 }
@@ -79,7 +96,11 @@ h1, h2, h3, h4, h5, h6 {
 main img {
     width: 100%;
     box-sizing: border-box;
-    padding: 20px 0px;
+    border-radius: 10px;
+}
+
+.grid-wrapper {
+    grid-column: 1 / -1;
 }
 
 .heading-content, .body-content {
@@ -123,6 +144,10 @@ h1 {
     margin: 0px 20px;
 }
 
+.body-content:last-child {
+    margin-bottom: 20px;
+}
+
 h2 {
     font-size: 26px;
     line-height: 30px;
@@ -163,7 +188,7 @@ main button {
     font-size: 16px;
     background-color: #FFCB05;
     color: #00274C;
-    margin: 10px;
+    border-radius: 5px;
 }
 
 main button:hover {
@@ -176,13 +201,26 @@ main button:hover {
 
 #degree-requirement button {
     display: block;
-    margin: 15px auto;
+    margin: auto;
+    
 }
 
 #advisor-help-buttons-container button {
     display: block;
-    margin: 15px auto;
     width: 300px;
+}
+
+a.advising-links {
+    display: inline-block;
+    text-decoration: none;
+    margin-bottom: 10px;
+    width: 100%;
+}
+
+a.advisor-links {
+    display: inline-block;
+    margin: 15px 15px;
+    text-decoration: none;
 }
 
 /* Student Life page only */
@@ -194,8 +232,23 @@ main button:hover {
     border-radius: 12px;
 }
 
+/* 404 Not found */
 
+#oops {
+    text-align: left;
+    color: #00274C;
+}
 
+.not-found {
+    justify-self: flex-start;
+}
+
+#question {
+    display: block;
+    margin: auto;
+    width: auto;
+    max-height: 400px;
+}
 
 /* ------Footer Styles------- */
 
@@ -203,6 +256,7 @@ footer {
     background-color: #00274C;
     color: white;
     padding: 20px;
+    margin-top: auto;
 }
 
 footer p {
@@ -224,4 +278,230 @@ footer a {
 footer a:hover {
     background-color: #FFCB05;
     color: #00274C;
+}
+
+/* ---------- Form ------------- */
+
+form {
+    background-color: #e4e4e4;
+    padding: 5px 20px;
+    border-radius: 15px;
+}
+
+input[type="text"] {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0px;
+    display: block;
+    border: 1px solid #00274C;
+    border-radius: 5px;
+    
+}
+
+label {
+    display: inline-block;
+    line-height: 20px;
+}
+
+legend {
+    font-weight: 600;
+    font-size: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.radio-wrapper {
+    margin-bottom: 10px;
+}
+
+textarea {
+    width: 100%;
+    min-height: 150px;
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    border: 1px solid #00274C;
+    margin-bottom: 10px;
+}
+
+[placeholder] {
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 16px;
+}
+
+input[type="submit"] {
+    background-color: #FFCB05;
+    color: #00274C;
+    border: none;
+    border-radius: 5px;
+
+    width: 100%;
+    padding: 15px;
+    font-size: 20px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+input[type="submit"]:hover {
+    color: #FFCB05;
+    background-color: #00274C;
+}
+
+
+@media screen and (min-width: 768px) {
+    nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 10px;
+    }
+
+    header {
+        position: sticky;
+        top: 0px;
+        z-index: 1;
+    }
+
+    #logo_plus_heading {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 30px;
+    }
+
+    #nav_heading {
+        display: inline-block;
+        font-family: "Montserrat", sans-serif;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 24px;
+    }
+
+    main {
+        grid-template-columns: repeat(12, 1fr);
+        justify-items: center;
+    }
+
+
+    h1 {
+        font-size: 40px;
+    }
+
+    .heading-content {
+        height: 300px;
+        justify-self: stretch;
+    }
+
+    .grid-wrapper {
+        grid-column: 1 / -1;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        max-width: 1140px;
+        gap: 20px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    #home-grid {
+        max-width: 1140px;
+        margin-left: 20px;
+        margin-right: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
+        box-sizing: border-box;
+        width: 100%;
+    }
+
+    .body-content {
+        padding-left: 30px;
+        padding-right: 30px;
+        max-width: 1140px;
+        box-sizing: border-box;
+        width: 100%;
+    }
+
+    .grid-wrapper > .body-content {
+        background-color: #faf3d7;
+        padding-bottom: 30px;
+        border-radius: 10px;
+    }
+    
+
+    .grid-wrapper > .body-content:nth-child(odd) {
+        grid-column: 1 / span 1;
+        margin: 0px;
+    }
+
+    .grid-wrapper > .body-content:nth-child(even) {
+        grid-column: 2 / span 1;
+        margin: 0px;
+    }
+
+    .grid-wrapper > .body-content:last-child:nth-child(odd), div:last-child:nth-child(odd) {
+        grid-column: 1 / span 2;
+    }
+
+    .flex-wrapper {
+        display: flex;
+        flex-direction: row;
+        gap: 30px;
+    }
+
+    .flex-wrapper > img {
+        width: 50%;
+        padding: 0;
+        height: auto;
+        align-self: flex-start;
+    }
+
+    .flex-wrapper > p, .flex-wrapper > div {
+        width: auto;
+    }
+
+    .student-org {
+        margin: 0px;
+    }
+
+    #degree-requirement {
+        display: flex;
+        flex-grow: 1;
+        flex-shrink: 1;
+    }
+
+    #degree-requirement > * {
+        flex: 1;
+    }
+
+    .tutors {
+        margin: 0;
+    }
+
+    #name-field {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+    }
+
+    #name-field > div {
+        flex-grow: 1;
+    }
+
+    .radio-wrapper {
+        display: inline-block;
+        margin-right: 30px;
+    }
+
+    input[type="radio"] {
+        margin-top: -3px;
+    }
+
+    input[type="submit"] {
+        width: auto;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
 }
